--- a/newArivalls.html
+++ b/newArivalls.html
@@ -117,7 +117,6 @@
         footer .rights {
             text-align: end;
         }
-
     </style>
 </head>
 <body>
@@ -175,7 +174,7 @@
                 </div>
                 <div class="grid3">
                         <img src="https://cdn.shopify.com/s/files/1/0633/2186/6445/files/S89f8c0d26b5841b7971c0fca538bbb4ag.webp?v=1707142034" alt="">
-                        <p>Mornwell T37 Electric Toothbrush Rotation</p>
+                        <p>Mornwell T37 Electric Toothbrush Rotation.</p>
 
                 </div>
             </div>
